--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <header>
         <h1>Kanishka Utagikar</h1>
-        <p>Information Technology Student | Web Developer | ML Enthusiast</p>
+        <p>Sophomore Information Technology Student | ML Enthusiast</p>
     </header>
 
     <main>
