--- a/index.html
+++ b/index.html
@@ -50,30 +50,47 @@
         <section id="projects">
             <h2>Projects</h2>
             <div class="project">
-                <h3>Bengaluru Property Price Estimator</h3>
+                <h3>ProSizeNet: Advanced Deep Learning for Protein Residue Size Prediction</h3>
                 <p>
-                    A FastAPI application for predicting real estate prices using machine learning techniques.
-                    Implemented advanced feature engineering and predictive modeling.
-                    <a href="https://github.com/kanishkautag/Bengaluru-House-Prices" target="_blank">GitHub Link</a>
+                    A hybrid CNN-Transformer architecture for predicting protein residue sizes. 
+                    Achieved state-of-the-art performance in protein structure prediction tasks using advanced attention mechanisms and robust validation techniques.
+                    <a href="https://github.com/kanishkautag/ProSizeNet-Predicting-Protein-Residue-Size-Using-Machine-LearningModel" target="_blank">GitHub Link</a>
+                </p>
+            </div>
+            <div class="project">
+                <h3>Multi-Agent-Med-System Medical Diagnosis AI Assistant</h3>
+                <p>
+                    An intelligent medical diagnosis system leveraging AI agents powered by Google's Gemini and CrewAI. 
+                    Features a modern web interface built using FastAPI.
+                    <a href="https://github.com/kanishkautag/Multi-Agent-Med-System" target="_blank">GitHub Link</a>
                 </p>
             </div>
             <div class="project">
                 <h3>Research Paper Title Generator</h3>
                 <p>
-                    Fine-tuned GPT-2 model to generate contextually relevant research paper titles.
-                    Demonstrated natural language processing skills and generative AI capabilities.
+                    Fine-tuned GPT-2 model to generate contextually relevant research paper titles. 
+                    Demonstrates advanced NLP techniques and generative AI capabilities.
                     <a href="https://huggingface.co/Kan05/Paper-Title-Generator-GPT2" target="_blank">View Project</a>
+                </p>
+            </div>
+            <div class="project">
+                <h3>Bengaluru Property Price Estimator</h3>
+                <p>
+                    A FastAPI application for predicting real estate prices using machine learning techniques. 
+                    Features advanced feature engineering and predictive modeling.
+                    <a href="https://github.com/kanishkautag/Bengaluru-House-Prices" target="_blank">GitHub Link</a>
                 </p>
             </div>
             <div class="project">
                 <h3>BERT Text Processing</h3>
                 <p>
-                    Flask-based application utilizing BERT for advanced text summarization and question-answering tasks.
-                    Showcased deep learning implementation in natural language understanding.
+                    Flask-based application utilizing BERT for text summarization and question-answering tasks. 
+                    Showcases deep learning in natural language understanding.
                     <a href="https://github.com/kanishkautag/BERT-Text-Summarization" target="_blank">GitHub Link</a>
                 </p>
             </div>
         </section>
+        
 
         <section id="socials">
             <h2>Connect With Me</h2>
