--- a/index.html
+++ b/index.html
@@ -58,21 +58,20 @@
                 </p>
             </div>
             <div class="project">
+                <h3>Research Paper Title Generator</h3>
+                <p>
+                    Fine-tuned GPT-2 model to generate contextually relevant research paper titles. 
+                    Demonstrates advanced NLP techniques and generative AI capabilities.
+                    <a href="https://paper-title-generator.streamlit.app/" target="_blank">View Project</a>
+                </p>
+            </div>
+            <div class="project">
                 <h3>Multi-Agent-Med-System Medical Diagnosis AI Assistant</h3>
                 <p>
                     An intelligent medical diagnosis system leveraging AI agents powered by Google's Gemini and CrewAI. 
                     Features a modern web interface built using FastAPI.
                     <a href="https://github.com/kanishkautag/Multi-Agent-Med-System" target="_blank">GitHub Link</a>
                 </p>
-            </div>
-            <div class="project">
-                <h3>Research Paper Title Generator</h3>
-                <p>
-                    Fine-tuned GPT-2 model to generate contextually relevant research paper titles. 
-                    Demonstrates advanced NLP techniques and generative AI capabilities.
-                    <a href="https://huggingface.co/Kan05/Paper-Title-Generator-GPT2" target="_blank">View Project</a>
-                </p>
-            </div>
             <div class="project">
                 <h3>Bengaluru Property Price Estimator</h3>
                 <p>
@@ -113,5 +112,10 @@
     </footer>
 
     <script src="script.js"></script>
+    <div class="theme-toggle">
+        <button id="themeToggle" aria-label="Toggle theme">
+            🌙
+        </button>
+    </div>
 </body>
 </html>
