--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
                     Features a modern web interface built using FastAPI.
                     <a href="https://github.com/kanishkautag/Multi-Agent-Med-System" target="_blank">GitHub Link</a>
                 </p>
+            </div>
             <div class="project">
                 <h3>Bengaluru Property Price Estimator</h3>
                 <p>
