--- a/index.html
+++ b/index.html
@@ -112,11 +112,10 @@
         <p>© 2024 Kanishka Utagikar | Crafted with passion for technology</p>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="script.js" defer></script>
     <div class="theme-toggle">
-        <button id="themeToggle" aria-label="Toggle theme">
-            🌙
-        </button>
+        <button id="themeToggle" aria-label="Toggle theme">🌙</button>
     </div>
-</body>
-</html>
+    </body>
+    </html>
+    
