--- a/index.html
+++ b/index.html
@@ -73,8 +73,12 @@
             <ul>
                 <li><a href="https://github.com/kanishkautag" target="_blank">GitHub</a></li>
                 <li><a href="https://www.linkedin.com/in/kanishka-utagikar-6116b6223" target="_blank">LinkedIn</a></li>
+                <li><a href="https://x.com/KanishkaUt18947" target="_blank">Twitter</a></li>
+                <li><a href="https://codeforces.com/profile/Prophet05" target="_blank">Codeforces</a></li>
+                <li><a href="https://www.kaggle.com/kanishkautagikar" target="_blank">Kaggle</a></li>
             </ul>
         </section>
+        
 
         <section id="contact">
             <h2>Contact</h2>
