--- a/index.html
+++ b/index.html
@@ -39,11 +39,8 @@
         <section id="summary">
             <h2>About Me</h2>
             <p>
-                I'm a passionate Information Technology student with a deep focus on Machine Learning, Data Science, and Web Development. 
-                My journey is driven by a curiosity to solve complex problems through innovative technological solutions. 
-                I thrive on transforming data into meaningful insights and creating intelligent systems that can learn and adapt.
-                With a strong foundation in programming and a keen interest in emerging technologies, 
-                I'm dedicated to pushing the boundaries of what's possible at the intersection of AI and software development.
+
+                I am a sophomore at Thadomal Shahani Engineering College, with a keen interest in the research aspects of Information Technology. My focus gravitates towards Machine Learning and Data Science, especially NLP, where I seek to contribute to the academic discourse by exploring innovative solutions to complex problems. I'm passionate about delving into research that pushes the boundaries of AI , aiming to transform data into profound intelligent systems.
             </p>
         </section>
 
@@ -77,7 +74,7 @@
                 <h3>MLP Model for Drug Target Classification</h3>
                 <p>
                     A <strong>Multi-Layer Perceptron (MLP)</strong> model for classifying drug target statuses based on various features. The model preprocesses text data using <strong>TF-IDF</strong> vectorization and applies one-hot encoding for categorical variables. It achieves a validation accuracy of 95%.
-                    <a href="https://github.com/kanishkautag/mlp-drug-target-classification" target="_blank">GitHub Link</a>
+                    <a href="https://github.com/kanishkautag/DJ-ML-EVENT-NEXUS" target="_blank">GitHub Link</a>
                 </p>
             </div>
             <div class="project">
