--- a/index.html
+++ b/index.html
@@ -46,20 +46,29 @@
 
         <section id="projects">
             <h2>Projects</h2>
-            <div class="project">
-                <h3>ProSizeNet: Advanced Deep Learning for Protein Residue Size Prediction</h3>
-                <p>
-                    A hybrid <strong>CNN-Transformer</strong> architecture for predicting protein residue sizes. 
-                    Achieved state-of-the-art performance in protein structure prediction tasks using advanced attention mechanisms and robust validation techniques.
-                    <a href="https://github.com/kanishkautag/ProSizeNet-Predicting-Protein-Residue-Size-Using-Machine-Learning" target="_blank">GitHub Link</a>
-                </p>
-            </div>
+            
             <div class="project">
                 <h3>Research Paper Title Generator</h3>
                 <p>
                     Fine-tuned <strong>GPT-2</strong> model to generate contextually relevant research paper titles. 
                     Demonstrates advanced <strong>NLP</strong> techniques and generative AI capabilities.
                     <a href="https://paper-title-generator.streamlit.app/" target="_blank">View Project</a>
+                </p>
+            </div>
+            <div class="project">
+                <h3>Embedding Optimization for Targeted Text Generation</h3>
+                <p>
+                    Implemented embedding optimization techniques to improve targeted text generation, 
+                    showcasing advanced methods in <strong>NLP</strong> and <strong>embedding manipulation</strong>.
+                    <a href="https://github.com/kanishkautag/Embedding-Optimization-for-Targeted-Text-Generation/blob/main/README.md" target="_blank">Github Link</a>
+                </p>
+            </div>
+            <div class="project">
+                <h3>ProSizeNet: Advanced Deep Learning for Protein Residue Size Prediction</h3>
+                <p>
+                    A hybrid <strong>CNN-Transformer</strong> architecture for predicting protein residue sizes. 
+                    Achieved state-of-the-art performance in protein structure prediction tasks using advanced attention mechanisms and robust validation techniques.
+                    <a href="https://github.com/kanishkautag/ProSizeNet-Predicting-Protein-Residue-Size-Using-Machine-Learning" target="_blank">GitHub Link</a>
                 </p>
             </div>
             <div class="project">
