--- a/index.html
+++ b/index.html
@@ -35,14 +35,18 @@
         <p>Sophomore Information Technology Student | ML Enthusiast</p>
     </header>
 
-    <main>
-        <section id="summary">
-            <h2>About Me</h2>
-            <p>
+<main>
+    <section id="summary">
+        <h2>About Me</h2>
+        <p>
+            I am a sophomore at Thadomal Shahani Engineering College, with a keen interest in the research aspects of Information Technology. Deeply interested in AI, especially NLP and efficient models. Actively building projects and exploring research ideas. Actively learning and seeking opportunities to grow in the field.
+        </p>
+        <p>
+            Open to research internships or any internships—feel free to reach out!
+        </p>
+    </section>
 
-                I am a sophomore at Thadomal Shahani Engineering College, with a keen interest in the research aspects of Information Technology. My focus gravitates towards Machine Learning and Data Science, especially NLP, where I seek to contribute to the academic discourse by exploring innovative solutions to complex problems. I'm passionate about delving into research that pushes the boundaries of AI , aiming to transform data into profound intelligent systems.
-            </p>
-        </section>
+
 
         <section id="projects">
             <h2>Projects</h2>
