--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
     <section id="summary">
         <h2>About Me</h2>
         <p>
-            I am a sophomore at Thadomal Shahani Engineering College, with a keen interest in the research aspects of Information Technology. Deeply interested in AI, especially NLP and efficient models. Actively building projects and exploring research ideas. Actively learning and seeking opportunities to grow in the field.
+            I am a sophomore at Thadomal Shahani Engineering College who is interested in AI, especially NLP and efficient models. Actively building projects and exploring research ideas. Actively learning and seeking opportunities to grow in the field.
         </p>
         <p>
+
             Open to research internships or any internships—feel free to reach out!
         </p>
     </section>
