--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 <main>
     <section id="summary">
         <h2>About Me</h2>
+        
         <p>
             I am a sophomore at Thadomal Shahani Engineering College who is interested in AI, especially NLP and efficient models. Actively building projects and exploring research ideas. Actively learning and seeking opportunities to grow in the field.
         </p>
@@ -45,6 +46,11 @@
 
             Open to research internships or any internships—feel free to reach out!
         </p>
+        <div class="resume-download">
+            <a href="https://drive.google.com/file/d/15kdhER2pNuw8R4t23IE2sLb5ciSP2Dqc/view?usp=sharing" target="_blank" class="download-btn">
+                View Resume
+            </a>
+        </div>
     </section>
 
 
