--- a/index.html
+++ b/index.html
@@ -105,14 +105,31 @@
                 </p>
             </div>
 
-            <div class="project">
-                <h3>BERT Text Processing</h3>
-                <p>
-                    <strong>Flask</strong>-based application utilizing <strong>BERT</strong> for text summarization and question-answering tasks. 
-                    Showcases deep learning in <strong>natural language understanding</strong>.
-                    <a href="https://github.com/kanishkautag/BERT-Text-Summarization" target="_blank">GitHub Link</a>
-                </p>
-            </div>
+<div class="project">
+    <h3>AI Job Assistant</h3>
+    <p>
+        A full-stack job search assistant built with <strong>Streamlit</strong> and <strong>FastAPI</strong>. Features include smart job matching, location-aware filtering, ATS resume optimization,downloadable cover letter generation, and course youtube suggestions powered by generative AI.
+        <a href="https://github.com/kanishkautag/AI-Job-Assistant" target="_blank">GitHub Link</a><br>
+        <em>Tech Stack:</em> Python, NLP, Resume Parsing, Streamlit, Gemini API
+    </p>
+</div>
+
+<div class="project">
+    <h3>Mental Therapy Chatbot App</h3>
+    <p>
+        A multi-agent mental wellness assistant built with <strong>Streamlit</strong>. Includes empathetic AI chat, journaling, mood tracking with visual calendars, relaxing audio integration, and curated mental health resources.
+        <a href="https://github.com/kanishkautag/Mental-Therapy-Chatbot-App" target="_blank">GitHub Link</a><br>
+        <em>Tech Stack:</em> Python, Multi-Agent LLM Architecture, Mood Visualization
+    </p>
+</div>
+
+<div class="project">
+    <h3></h3>
+    <p>
+        AI education initiative developed during the NMIMS Hackathon which got us placed in top 10.
+        <a href="https://github.com/kanishkautag/Neural-Ninjas" target="_blank">GitHub Link</a>
+    </p>
+</div>
         </section>
 
         <section id="tech-stack">
