--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </div>
 
 <div class="project">
-    <h3></h3>
+    <h3>AI powered Career Guidance</h3>
     <p>
         AI education initiative developed during the NMIMS Hackathon which got us placed in top 10.
         <a href="https://github.com/kanishkautag/Neural-Ninjas" target="_blank">GitHub Link</a>
